--- a/Pegar taxas do site.ipynb
+++ b/Pegar taxas do site.ipynb
@@ -83,6 +83,8 @@
     "    \n",
     "    #get the net salary\\pega o valor do net_pay\n",
     "    valor = navegador.find_element(By.XPATH, '//*[@id=\"tax-breakdown-table\"]/tbody/tr[7]/td[3]/span').text\n",
+    "    \n",
+    "    #add the values to the lists\\ adiciona os valores nas listas\n",
     "    net_income.append(int(valor[1:]))\n",
     "    gross_income.append(i)\n",
     "\n",
